fix label alignment

--- a/docs/style.css
+++ b/docs/style.css
@@ -211,6 +211,11 @@ h1 {
 }
 
 .summary-item .label {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    justify-content: center;
+    min-height: 2.8rem;
     color: var(--text-secondary);
     font-size: 0.875rem;
     text-transform: uppercase;
